--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.header-img {
     width: 100%;
 }
-.aaa .more_inf {
+.header-link {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header { text-align: center;
 }
 }
-.centered-main-page-element {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
+.add-task-wrapper {
     display: flex;
 }
 ul {
@@ -44,7 +44,7 @@ li, h3 {
 input,button{
     outline:none;
 }
-button {
+.btn {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +53,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+btn:hover {
     color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +66,7 @@ label[for="new-task"] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,7 +78,7 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task:focus {
     color: #333;
 }
 
@@ -93,7 +92,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.tasks-list-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,14 +101,14 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.checkbox, task, btn {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox {
     margin: 0 10px;
 }
-li > label {
+.task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
@@ -118,31 +117,31 @@ li > label {
 li >    input[type="text"] {
     width: 226px
 }
-button.delete img {
+.delete-btn-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-btn-img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks .task {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.tasks-list-item .task-name {
     display:none
 }
 
-ul li.edit-mode input[type=text] {
+.tasks-list-item.edit-mode .task-name {
     display:inline-block;
     width:224px
 }
 
-ul li.edit-mode label {
+.tasks-list-item.edit-mode .task {
     display:none;
 }
