--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .add-task-wrapper {
@@ -135,7 +135,7 @@ input#new-task {
 }
 
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .delete-btn-img {
@@ -150,18 +150,18 @@ li >    input[type="text"] {
 
 /* Completed */
 .completed-tasks .task {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .tasks-list-item .task-name {
-  display: none
+  display: none;
 }
 
 .tasks-list-item.edit-mode .task-name {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .tasks-list-item.edit-mode .task {
