fix: add semicolon css file string 162 (rule 3.7); add backspace at css property css file string 49 (rule 3.6); change tag selector body to class selector (rule 3.4)

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: "Lato", sans-serif;
@@ -46,7 +46,7 @@ body {
 }
 /* Reset Style Start */
 ul {
-  margin:0;
+  margin: 0;
   padding: 0;
 }
 
@@ -159,7 +159,7 @@ button{
 }
 
 .completed__tasks .task__name:focus {
-  color: #333
+  color: #333;
 }
 
 /* Edit Task */
